# web-research

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  shim.py
.github/workflows/: ci.yml
.memory-bank/: CONTEXT.md  MEMORY.md  REFERENCE.md  activeContext.md  currentTask.md  dead-ends.md  decisions.graph.jsonl  progress.md  systemPatterns.md
.memory-bank/topics/: _index.md  code-architecture.md  code-map.md
docs/: ECOSYSTEM.md  proposals.md
docs/plans/: 2026-07-12-001-fix-cache-cli-resilience-plan.md  2026-07-23-project-hardening.md
shims/: web-research.py
src/web_research/: __init__.py  __main__.py  _version.py  capabilities.py  cli.py  cli_parser.py
src/web_research/features/intelligence/: code_analyze.py  engine.py
src/web_research/features/ranking/: engine.py  tei_rerank.py
src/web_research/features/ranking/data/: __init__.py  authority_domains.txt
src/web_research/features/read/: command.py  engine.py
src/web_research/features/read/backends/: __init__.py  base.py  firecrawl.py  html.py  zai_reader.py
src/web_research/features/research/: command.py
src/web_research/features/search/: command.py  engine.py
src/web_research/features/search/backends/: __init__.py  base.py  duckduckgo.py  minimax.py  searxng.py  zai.py
src/web_research/features/status/: command.py  engine.py
src/web_research/features/synthesis/: engine.py
src/web_research/shared/: cache.py  cli_helpers.py  compat.py  config.py  formatters.py  http.py  json_utils.py  ollama_api.py  results.py  robots.py
tests/: _helpers.py  conftest.py  test_backends.py  test_cache.py  test_cli.py  test_controller_quality.py  test_domains.py  test_enhancements.py  test_follow_up.py  test_formatter.py  test_intelligence.py  test_ranking.py  test_recency.py  test_rerank.py  test_retrieval_eval.py  test_scrape.py  test_search.py  test_shim.py  test_status.py  test_synthesis.py  test_web_research.py
todos/: 001-complete-p3-expand-capability-manifest-options.md
