[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "web-research"
version = "0.2.0"
description = "Local-first web research engine for LLM agents: SearXNG + Firecrawl + Ollama rerank/synthesis, with cheap cloud fallback. Graduated from ~/.claude/scripts/web_research/."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "heldigard" }]
keywords = ["claude-code", "web-search", "research", "searxng", "firecrawl", "ollama", "llm-agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = []

[project.optional-dependencies]
test = ["build>=1.2", "mypy>=1.11", "pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

# Console script so `pip install -e .` puts `web-research` on PATH. The wired
# ecosystem path is the shim at ~/.claude/scripts/web-research.py (skills call
# `python3 ~/.claude/scripts/web-research.py <cmd>`); ~/.local/bin/web-research
# symlinks to that shim. This entry is a convenience for standalone installs.
[project.scripts]
web-research = "web_research.cli:main"

[project.urls]
Changelog = "https://github.com/heldigard/web-research/blob/main/CHANGELOG.md"
Issues = "https://github.com/heldigard/web-research/issues"
Repository = "https://github.com/heldigard/web-research"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/web_research"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/.github",
  "/.memory-bank",
  "/docs/plans",
  "/todos",
  "/CLAUDE.md",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pyright]
extraPaths = ["src"]

[tool.vulture]
# Settings fields and TYPE_CHECKING aliases are consumed through config's
# module-level __getattr__ compatibility proxy, which static analysis cannot see.
ignore_names = [
  "ollama_url",
  "ollama_model",
  "ollama_synth_model",
  "ollama_embed",
  "minimax_api_key",
  "zai_api_key",
  "web_synth_cloud_model",
  "web_synth_max_context_chars",
  "ecosystem_scripts",
  "schema_version",
  "SEARXNG_URL",
  "FC_URL",
  "FC_API_KEY",
]
